@@ -1,5 +1,6 @@
 22/02/2025:
-	- Updated CIELAB decoding to fully handle 8 and 16 bit as well as floating point images
+	- Updated CIELAB decoding to fully handle 8 and 16 bit as well as floating point images.
+	- Added new sRGB2LAB() function.
 
 
 20/02/2025:
